--- a/index.html
+++ b/index.html
@@ -1,83 +1,90 @@
 <!doctype html>
 <html>
 <head>
+  <link href="/bootstrap/css/bootstrap.css" rel="stylesheet">
+  <link href="/bootstrap/css/bootstrap-theme.css" rel="stylesheet">
   <title>Luke's Chat</title>
   <style>
   * { margin: 0; padding: 0; box-sizing: border-box; }
   body { font: 13px Helvetica, Arial; }
-  form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
-  form input { border: 5px ; padding: 5px; width: 35%; margin-right: .5%; }
-  form button { width: 8%; background: rgb(130, 224, 255); border: none; padding: 9px; }
+  #absendbereich { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
+  /*#absendbereich input { border: 5px ; padding: 5px; width: 35%; margin-right: .5%; }*/
+  #absendbereich button { width: 100%; background: rgb(130, 224, 255); border: none; padding: 9px; }
   #messages { list-style-type: none; margin: 0; padding: 0; }
   #messages li { padding: 5px 10px; }
-  #inputUsername {width: 110px}
-  #m {width: 1260px}
   #messages li:nth-child(odd) { background: #eee; }
   .dieNachricht{}
-  </style>
-</head>
-<body>
-  <div class="container">
-      <ul id="messages"></ul>
-        <div class="row">
-  </div>
-  </div>
-  <div class="container">
-    <form class="form-signin">
-      <input type="text" id="inputUsername" class="form-control" placeholder="Username"  value="Name:">
-      <input id="m" autocomplete="off" / placeholder="Message" value="Hallo" autofocus="" >
-      <button id="absendenKnopf">Send</button>
-    </form>
-  </div>
+    </style>
+  </head>
+  <body>
+    <div class="container" id="messages">
+    </div>
+    <div class="container" id="absendbereich">
+              <form class="form-horizontal">
+        <div class="form-group">
+          <div class="col-sm-1">
+            <input type="text" id="inputUsername" class="form-control" placeholder="Username"  value="Name">
+          </div>
+          <div class="col-sm-10">
+            <input id="m" autocomplete="off" / placeholder="Message" class="form-control" value="Hallo" autofocus="" >
+          </div>
+          <div class="col-sm-1">
+            <button id="absendenKnopf" class= btn btn-success>Send</button>
+          </div>
+        </form>
+      </div>
+    </div>
 
-  <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
 
-  <script src="/socket.io/socket.io.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script>
 
-  var socket = io();
-  $('form').submit(function(){
-    socket.emit('chat message', $('#m').val());
-    $('#m').val('');
-    $('#m').val('');
-    return false;
-  });
-  socket.on('chat message', function(msg){
-    var derBenutzername = $('#inputUsername').val()
-    var derName = '<div class="derName">'  + derBenutzername + ':</div>';
-    var dieNachricht = '<div class="dieNachricht">' + msg + '</div>';
-    var chatExample = '<li>' + derName + dieNachricht + '</li>';
-    $('#messages')
-    .append(chatExample)
-
-  });
-
-  $("#m").focusin(function(){
-    $('#absendenKnopf').disable(false);
-});
-
-  $(function() {
-    jQuery.fn.extend({
-      disable: function(state) {
-        return this.each(function() {
-          var $this = $(this);
-          if($this.is('input, button'))
-          this.disabled = state;
-          else
-          $this.toggleClass('disabled', state);
-        });
-      }
+    var socket = io();
+    $('form').submit(function(){
+      socket.emit('chat message', $('#m').val());
+      $('#m').val('');
+      $('#m').val('');
+      return false;
     });
 
-    $('#absendenKnopf').disable(true);
+    socket.on('chat message', function(msg){
+      var derBenutzername = $('#inputUsername').val()
+      var derName = '<div class="col-sm-1">'  + derBenutzername + ':</div>';
+      var dieNachricht = '<div class="col-sm-9">' + msg + '</div>';
+      var dieZeit = '<div class="col-sm-2">' + msg + '</div>';
+      var chatExample = '<div class="row" >' + derName + dieNachricht + dieZeit + '</div>';
+      $('#messages')
+      .append(chatExample)
 
-    $('body').on('click', 'a.disabled', function(event) {
-      event.preventDefault();
     });
-  });
 
-  </script>
-</body>
-</html>
+    $("#m").focusin(function(){
+      $('#absendenKnopf').disable(false);
+    });
+
+    $(function() {
+      jQuery.fn.extend({
+        disable: function(state) {
+          return this.each(function() {
+            var $this = $(this);
+            if($this.is('input, button'))
+            this.disabled = state;
+            else
+            $this.toggleClass('disabled', state);
+          });
+        }
+      });
+
+      $('#absendenKnopf').disable(true);
+
+      $('body').on('click', 'a.disabled', function(event) {
+        event.preventDefault();
+      });
+    });
+
+    </script>
+  </body>
+  </html>
