--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
       var derBenutzername = $('#inputUsername').val()
       var derName = '<div class="col-sm-1">'  + derBenutzername + ':</div>';
       var dieNachricht = '<div class="col-sm-9">' + msg + '</div>';
-      var dieZeit = '<div class="col-sm-2">' + msg + '</div>';
+      var uhrzeit = new Date();
+      var dieZeit = '<div class="col-sm-2">' + uhrzeit.getHours() + ':' + uhrzeit.getMinutes() + ':' + uhrzeit.getSeconds() +   '</div>';
       var chatExample = '<div class="row" >' + derName + dieNachricht + dieZeit + '</div>';
       $('#messages')
       .append(chatExample)
