--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
     });
 
-    $("#m").focusin(function(){
+    $("#m").focusout(function(){
       $('#absendenKnopf').disable(false);
     });
 
