--- a/index.html
+++ b/index.html
@@ -17,10 +17,28 @@
     </style>
   </head>
   <body>
+
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+          </div>
+          <div class="modal-body">
+            <input type="text" placeholder="Username" class="form-control" id="modaltext">
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-primary">Anmelden</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <div class="container" id="messages">
     </div>
     <div class="container" id="absendbereich">
-              <form class="form-horizontal">
+      <form class="form-horizontal">
         <div class="form-group">
           <div class="col-sm-1">
             <input type="text" id="inputUsername" class="form-control" placeholder="Username"  value="Name">
@@ -40,6 +58,8 @@
     <script src="/socket.io/socket.io.js"></script>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="bootstrap/js/bootstrap.js"></script>
+
     <script>
 
     var socket = io();
@@ -85,6 +105,8 @@
         event.preventDefault();
       });
     });
+
+    $('#myModal').modal()
 
     </script>
   </body>
